samba (2:4.11.0+dfsg-1) UNRELEASED; urgency=medium

  * New upstream major release
    - Update d/gbp.conf, d/watch and d/README.source for 4.11
    - Import upstream release
    - Update fix-nfs-service-name-to-nfs-kernel-server.patch
    - Bump build-depends talloc >= 2.2.0, tdb >= 1.4.2, tevent >= 0.10.0 and
      ldb >= 2:2.0.7
    - libsamba-passdb.so bumped to 0.28.0
    - libnon-posix-acls is now a subsystem
    - Drop libparse-pidl-perl package (Closes: #939419)
    - Add new files to d/*.install
    - Move libsamba-util.so.* to libwbclient0, to avoid circular dependencies
  * Add build-Remove-tests-for-getdents-and-getdirentries.patch, to fix FTBFS on
    armel and armhf

 -- Mathieu Parent <sathieu@debian.org>  Wed, 18 Sep 2019 08:30:33 +0200

samba (2:4.10.8+dfsg-1) unstable; urgency=medium

  * Upload to unstable
  * New upstream release:
    - CVE-2019-10197: Combination of parameters and permissions can allow user
      to escape from the share path definition

 -- Mathieu Parent <sathieu@debian.org>  Tue, 10 Sep 2019 18:46:54 +0200

samba (2:4.10.7+dfsg-1) experimental; urgency=medium

  [ Mathieu Parent ]
  * New upstream release
    - Update patches
    - Drop nsswitch-Add-try_authtok-option-to-pam_winbind.patch, merged
    - libsamba-passdb.so bumped to 0.27.2
    - Update symbols
    - Update installed files
  * samba-libs: Fix Breaks+Replaces: libndr-standard0 (<< 2:4.0.9)
    (Closes: #910242)
  * Add missing Breaks+Replace found by piuparts (Closes: #929217)
  * Enable vfs_nfs4acl_xattr (Closes: #930540)
  * ctdb:
    - enable ceph and etcd recovery lock
    - Downgrade ctdb_mutex_ceph_rados_helper shlibdeps to recommends
  * Add gitlabracadabra.yml
  * Update salsa-ci.yml

  [ Rafael David Tinoco ]
  * debian/rules: Make DEB_HOST_ARCH_CPU initialized through dpkg-architecture
    (Closes: #931138)
  * CTDB NFS fixes from Ubuntu (Closes: #929931, LP: #722201):
    - d/p/fix-nfs-service-name-to-nfs-kernel-server.patch: change nfs service