@@ -23,7 +23,7 @@ Build-Depends: bison,
                libblkid-dev,
                libbsd-dev,
                libcap-dev [linux-any],
-               libcephfs-dev [linux-any],
+               libcephfs-dev [amd64 arm64 i386 mips64el ppc64el ppc64 x32],
                libcmocka-dev (>= 1.1.3),
                libcups2-dev,
                libdbus-1-dev,
